[package]
name = "serde-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false }

[features]
default = ["std"]
alloc = ["serde/alloc"]
std = ["alloc", "serde/std"]
no-unsized-seq = []
test-utils = ["std", "serde/derive"]

[dev-dependencies]
serde-bin = { path = ".", features = ["test-utils"] }


